--- a/.docker/php-cli/Dockerfile
+++ b/.docker/php-cli/Dockerfile
@@ -2,6 +2,7 @@ FROM php:8.1-cli-alpine
 
 RUN apk update \
     && apk add --no-cache curl g++ make autoconf bash \
+    && docker-php-ext-install mysqli \
     && curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
     && docker-php-source extract \
     && pecl install xdebug \
