--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
   "name": "carlonicora/minimalism-test-suite",
   "description": "Minimal Test Suite",
-  "version": "1.0.12",
+  "version": "2.0.0-beta1",
   "homepage": "https://carlonicora.com",
   "time": "2022-01-11",
   "license": "MIT",
   "type": "library",
+  "minimum-stability": "beta",
   "authors": [
     {
       "name": "Carlo Nicora",
@@ -25,7 +26,9 @@
     "ext-curl": "*",
     "carlonicora/jsonapi": "~3.0",
     "carlonicora/minimalism": "~13.0",
-    "carlonicora/minimalism-interface-data": "~1.0"
+    "carlonicora/minimalism-interface-data": "~1.0",
+    "carlonicora/minimalism-interface-sql": "~1.0",
+    "carlonicora/minimalism-service-mysql": "~6.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9"
