--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "carlonicora/minimalism-test-suite",
   "description": "Minimal Test Suite",
-  "version": "2.0.0-beta9",
+  "version": "2.0.0",
   "homepage": "https://carlonicora.com",
   "time": "2022-01-11",
   "license": "MIT",
   "type": "library",
-  "minimum-stability": "beta",
+  "minimum-stability": "stable",
   "authors": [
     {
       "name": "Carlo Nicora",
